<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_centerVertical="true"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/LoginimageView"
        android:layout_width="match_parent"
        android:layout_height="274dp"
        app:srcCompat="@drawable/indir" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/LoginEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:ems="10"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            tools:layout_editor_absoluteX="102dp"
            tools:layout_editor_absoluteY="162dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/LoginPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:layout_margin="4dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="10dp"
            tools:layout_editor_absoluteX="102dp"
            tools:layout_editor_absoluteY="240dp" />
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Login_Button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="227dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/custom_loginbutton"
        android:onClick="logIn"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        />


    <TextView
        android:id="@+id/ForgetTxtView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="5dp"
        android:text="@string/forget_password" />

    <Button
        android:id="@+id/GoSignup"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="229dp"
        android:layout_height="38dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@android:color/transparent"
        android:textColor="#3092BF"
        android:onClick="gotoSignUp"
        android:text="@string/not_a_member_sign_up"
        android:textAllCaps="false"

        android:textSize="14sp" />



</LinearLayout>