<?xml version="1.0" encoding="utf-8"?>


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:padding="3dp"
        android:src="@drawable/signup2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_marginTop="100dp"
        android:gravity="top"
        android:orientation="vertical">
        <TextView
            android:id="@+id/SignUp_SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:text="@string/signUp"
            android:textSize="20sp"
            android:textStyle="bold" />
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp"
            android:layout_gravity="center">
            <EditText
                android:id="@+id/SignUp_Email"
                android:layout_width="222dp"
                android:layout_height="37dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="10dp"

                android:textSize="16sp"
                tools:layout_editor_absoluteX="102dp"
                tools:layout_editor_absoluteY="162dp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#FFFFFF"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            android:layout_gravity="center">
            <EditText
                android:id="@+id/SignUp_TextPersonName"
                android:layout_width="222dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textSize="16sp" /></androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#FFFFFF"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            android:layout_gravity="center">
            <EditText
                android:id="@+id/SignUp_Password"
                android:layout_width="222dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="102dp"
                tools:layout_editor_absoluteY="240dp" /></androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/SignUp_Button"
            android:layout_width="227dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/custom_loginbutton"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/SignUp_GoLogin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="229dp"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@android:color/transparent"
            android:text="@string/already_resgistered_log_in"
            android:textAllCaps="false"
            android:textColor="#3092BF"
            android:textSize="14sp" />
    </LinearLayout>

</FrameLayout>